-Created the AlbumService.java -Fixed image not showing in PlaylistFragment -Implemented the API for the AlbumLibraryFragment.java -Put all the services in the same package -Updated Album POJO -API code necessary to obtain the user saved albums -Saved albums implementation in fragment -API code for get a Album by reference -API code to get the songs of an Album -Solved bugs -Corrected more tipos

--- a/app/src/main/res/layout/fragment_playlist.xml
+++ b/app/src/main/res/layout/fragment_playlist.xml
@@ -8,17 +8,18 @@
     xmlns:tools="http://schemas.android.com/tools">
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:id="@+id/image_playlist"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="50dp"
-            tools:src="@drawable/logo_meowfy"
+            tools:src="@drawable/common_google_signin_btn_text_dark"
             tools:padding="80dp"
-            tools:background="@color/primaryLigth2"/>
+            tools:background="@color/primaryLigth2"
+            android:contentDescription="TODO" />
 
         <TextView
             android:layout_width="wrap_content"
