--- a/app/src/main/res/layout/fragment_album.xml
+++ b/app/src/main/res/layout/fragment_album.xml
@@ -52,7 +52,7 @@
             android:id="@+id/shuffel_album"
             android:layout_centerHorizontal="true"
             android:layout_below="@id/subname_album"
-            android:text="SHUFFEL PLAY"
+            android:text="SHUFFLE PLAY"
             android:layout_marginTop="15dp"
             style="@style/Widget.AppCompat.Button.Borderless" />
         <ImageButton
