--- a/app/src/main/res/layout/bottom_sheet_main.xml
+++ b/app/src/main/res/layout/bottom_sheet_main.xml
@@ -8,7 +8,8 @@
     app:behavior_hideable="true"
     android:background="@color/primaryLigth1"
     app:behavior_peekHeight="64dp"
-    android:layout_marginTop="530dp">
+    android:layout_marginTop="530dp"
+    android:visibility="invisible">
 <ImageView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
