--- a/app/src/main/res/layout/fragment_reproductor.xml
+++ b/app/src/main/res/layout/fragment_reproductor.xml
@@ -135,14 +135,14 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="2dp"
-                        android:ellipsize="end"
-                        android:lines="1"
-                        android:maxLines="1"
-                        android:singleLine="true"
-
                         android:text="rrrrr"
                         android:textColor="@color/white"
-                        android:textSize="20sp" />
+                        android:textSize="20sp"
+                        android:ellipsize="marquee"
+                        android:scrollHorizontally="true"
+                        android:scrollbarAlwaysDrawHorizontalTrack="true"
+                        android:singleLine="true"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Title"/>
 
                     <TextView
                         android:id="@+id/subtitle"
